anolis: x86: Enable Kidled for x86
ANBZ: #918

Kidled is an background thread to monitor the cold memory in the
system. It is useful to increase the resource utilization, and
ARM has been enabled, hence X86 also should enable it.

Acked-by: Gang Deng <gavin.dg@linux.alibaba.com>
Signed-off-by: zhongjiang-ali <zhongjiang-ali@linux.alibaba.com>

--- a/arch/x86/configs/anolis_defconfig
+++ b/arch/x86/configs/anolis_defconfig
@@ -1043,7 +1043,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_ZSMALLOC_STAT=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_DEFERRED_STRUCT_PAGE_INIT=y
-# CONFIG_IDLE_PAGE_TRACKING is not set
+CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_ARCH_HAS_PTE_DEVMAP=y
 CONFIG_ZONE_DEVICE=y
 CONFIG_ARCH_HAS_HMM=y
@@ -1061,6 +1061,7 @@ CONFIG_ARCH_HAS_PKEYS=y
 CONFIG_READ_ONLY_THP_FOR_FS=y
 CONFIG_HUGETEXT=y
 CONFIG_ARCH_HAS_PTE_SPECIAL=y
+CONFIG_KIDLED=y
 CONFIG_MEMSLI=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
