--- a/arch/arm64/configs/anolis_defconfig
+++ b/arch/arm64/configs/anolis_defconfig
@@ -6096,7 +6096,7 @@ CONFIG_TEST_KSTRTOX=y
 # CONFIG_TEST_IDA is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_USER_COPY is not set
-# CONFIG_TEST_BPF is not set
+CONFIG_TEST_BPF=m
 # CONFIG_FIND_BIT_BENCHMARK is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
