--- a/arch/x86/configs/anolis-debug_defconfig
+++ b/arch/x86/configs/anolis-debug_defconfig
@@ -8015,7 +8015,7 @@ CONFIG_TEST_KSTRTOX=y
 # CONFIG_TEST_PARMAN is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_USER_COPY is not set
-# CONFIG_TEST_BPF is not set
+CONFIG_TEST_BPF=y
 # CONFIG_FIND_BIT_BENCHMARK is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
