anolis: configs: enable CONFIG_HW_RANDOM_ZHAOXIN to m
ANBZ: #4318

Enable CONFIG_HW_RANDOM_ZHAOXIN for Zhaoxin HWRNG driver.

Signed-off-by: leoliu-oc <leoliu-oc@zhaoxin.com>

--- a/arch/x86/configs/anolis_defconfig
+++ b/arch/x86/configs/anolis_defconfig
@@ -3639,6 +3639,7 @@ CONFIG_HW_RANDOM_TIMERIOMEM=m
 CONFIG_HW_RANDOM_INTEL=m
 CONFIG_HW_RANDOM_AMD=m
 CONFIG_HW_RANDOM_VIA=m
+CONFIG_HW_RANDOM_ZHAOXIN=m
 CONFIG_HW_RANDOM_VIRTIO=y
 CONFIG_NVRAM=y
 # CONFIG_APPLICOM is not set
