anolis: drivers/bzwx: add Chengdu BeiZhongWangXin Technology N5/N6 Series Network Card Driver
ANBZ: #9074

add Chengdu BeiZhongWangXin Technology N5/N6 Series Network Card Driver

Signed-off-by: xiaohuihui-bzwx-kj <xiaohuihui@bzwx-kj.com>
Reviewed-by: Guixin Liu <kanie@linux.alibaba.com>
Link: https://gitee.com/anolis/cloud-kernel/pulls/3214

--- a/drivers/net/ethernet/Kconfig
+++ b/drivers/net/ethernet/Kconfig
@@ -69,6 +69,7 @@ config DNET
 	  To compile this driver as a module, choose M here: the module
 	  will be called dnet.
 
+source "drivers/net/ethernet/bzwx/Kconfig"
 source "drivers/net/ethernet/dec/Kconfig"
 source "drivers/net/ethernet/dlink/Kconfig"
 source "drivers/net/ethernet/emulex/Kconfig"
