--- a/arch/arm64/configs/anolis_defconfig
+++ b/arch/arm64/configs/anolis_defconfig
@@ -2740,6 +2740,10 @@ CONFIG_CHELSIO_IPSEC_INLINE=m
 CONFIG_NET_VENDOR_DAVICOM=y
 # CONFIG_DM9051 is not set
 CONFIG_DNET=m
+CONFIG_NET_VENDOR_BZWX=y
+CONFIG_NCE=m
+CONFIG_NE6X=m
+CONFIG_NE6XVF=m
 # CONFIG_NET_VENDOR_DEC is not set
 # CONFIG_NET_VENDOR_DLINK is not set
 # CONFIG_NET_VENDOR_EMULEX is not set
