--- a/arch/x86/configs/anolis_defconfig
+++ b/arch/x86/configs/anolis_defconfig
@@ -2835,6 +2835,10 @@ CONFIG_ENIC=m
 CONFIG_NET_VENDOR_DAVICOM=y
 # CONFIG_DM9051 is not set
 CONFIG_DNET=m
+CONFIG_NET_VENDOR_BZWX=y
+CONFIG_NCE=m
+CONFIG_NE6X=m
+CONFIG_NE6XVF=m
 CONFIG_NET_VENDOR_DEC=y
 # CONFIG_NET_TULIP is not set
 # CONFIG_NET_VENDOR_DLINK is not set
