anolis: configs: add scripts to check kconfig files
ANBZ: #9310

This commit add scripts to check the kconfig files obey constraints or
not.
Use follow command to check:
cd anolis; make dist-configs-check

Signed-off-by: Qiao Ma <mqaio@linux.alibaba.com>
Reviewed-by: Xunlei Pang <xlpang@linux.alibaba.com>
Link: https://gitee.com/anolis/cloud-kernel/pulls/3236

--- a/anolis/configs/Makefile
+++ b/anolis/configs/Makefile
@@ -25,6 +25,9 @@ dist-configs-import:
 dist-configs-export:
 	@sh scripts/export_configs.sh
 
+dist-configs-check:
+	@sh examination/configs-check.sh
+
 dist-configs-help:
 	@echo ''
 	@echo '--------------------------------'
