x86: configs: Add kernel config required for IOMMUFD Dirty Tracking
ANBZ: #9185

Intel-SIG: no upstream x86: configs: Add kernel config required for IOMMUFD Dirty Tracking
Backport to support Intel QAT live migration for in-tree driver

Signed-off-by: Aichun Shi <aichun.shi@intel.com>
Reviewed-by: Artie Ding <artie.ding@linux.alibaba.com>
Link: https://gitee.com/anolis/cloud-kernel/pulls/3290

--- a/arch/x86/configs/anolis_defconfig
+++ b/arch/x86/configs/anolis_defconfig
@@ -6003,7 +6003,7 @@ CONFIG_INTEL_IOMMU_SVM=y
 CONFIG_INTEL_IOMMU_FLOPPY_WA=y
 CONFIG_INTEL_IOMMU_SCALABLE_MODE_DEFAULT_ON=y
 CONFIG_INTEL_IOMMU_PERF_EVENTS=y
-# CONFIG_IOMMUFD is not set
+CONFIG_IOMMUFD=m
 CONFIG_IRQ_REMAP=y
 CONFIG_HYPERV_IOMMU=y
 # CONFIG_VIRTIO_IOMMU is not set
