anolis: configs: Add kernel config for Intel IAA crypto driver
ANBZ: #9252

Add kernel config for Intel IAA compression accelerator crypto driver.

Intel-SIG: no upstream anolis: configs: Add kernel config for Intel IAA crypto driver.
Backporting patches for Intel IAA crypto driver on Intel Xeon platform.

Signed-off-by: Xiaochen Shen <xiaochen.shen@intel.com>
Reviewed-by: Artie Ding <artie.ding@linux.alibaba.com>
Link: https://gitee.com/anolis/cloud-kernel/pulls/3291

--- a/arch/x86/configs/anolis_defconfig
+++ b/arch/x86/configs/anolis_defconfig
@@ -7464,6 +7464,8 @@ CONFIG_CRYPTO_DEV_QAT_DH895xCCVF=m
 CONFIG_CRYPTO_DEV_QAT_C3XXXVF=m
 CONFIG_CRYPTO_DEV_QAT_C62XVF=m
 # CONFIG_CRYPTO_DEV_QAT_ERROR_INJECTION is not set
+CONFIG_CRYPTO_DEV_IAA_CRYPTO=m
+CONFIG_CRYPTO_DEV_IAA_CRYPTO_STATS=y
 CONFIG_CRYPTO_DEV_CHELSIO=m
 # CONFIG_CRYPTO_DEV_VIRTIO is not set
 # CONFIG_CRYPTO_DEV_SAFEXCEL is not set
