anolis: kernel release 5.10.134-17_rc2
ANCK-5.10 release 5.10.134-17 candidate 2

Signed-off-by: Qinyun Tan <qinyuntan@linux.alibaba.com>

--- a/anolis/Makefile.variables
+++ b/anolis/Makefile.variables
@@ -18,8 +18,8 @@ DIST_RELEASE_MINOR_VERSION =
 # testing stage.
 # eg: alpha, beta, rc
 DIST_TESTING_STAGE = rc
-DIST_TESTING_STAGE_MAJOR_VERSION = 1
-DIST_TESTING_STAGE_MINOR_VERSION = 1
+DIST_TESTING_STAGE_MAJOR_VERSION = 2
+DIST_TESTING_STAGE_MINOR_VERSION =
 
 # special versions, eg: the pgo version
 DIST_SPECIAL_VERSION_NAME = 
