anolis: sched: enable CONFIG_GROUP_BALANCER for sw_64 and loongarch
ANBZ: #8765

Enable CONFIG_GROUP_BALANCER for sw_64 and loongarch.

Signed-off-by: Cruz Zhao <CruzZhao@linux.alibaba.com>

--- a/arch/loongarch/configs/anolis_defconfig
+++ b/arch/loongarch/configs/anolis_defconfig
@@ -2219,3 +2219,4 @@ CONFIG_LOONGARCH_IOMMU=y
 CONFIG_CMDLINE="vfio_iommu_type1.allow_unsafe_interrupts=1 nokaslr"
 CONFIG_CPU_HAS_LSX=y
 CONFIG_CPU_HAS_LASX=y
+CONFIG_GROUP_BALANCER=y
