--- a/arch/loongarch/configs/anolis-debug_defconfig
+++ b/arch/loongarch/configs/anolis-debug_defconfig
@@ -2223,3 +2223,4 @@ CONFIG_LOONGARCH_IOMMU=y
 CONFIG_CMDLINE="vfio_iommu_type1.allow_unsafe_interrupts=1 nokaslr"
 CONFIG_CPU_HAS_LSX=y
 CONFIG_CPU_HAS_LASX=y
+CONFIG_GROUP_BALANCER=y
