--- a/arch/sw_64/configs/anolis_defconfig
+++ b/arch/sw_64/configs/anolis_defconfig
@@ -682,3 +682,4 @@ CONFIG_CONSOLE_LOGLEVEL_QUIET=7
 CONFIG_SCHEDSTATS=y
 # CONFIG_RCU_TRACE is not set
 # CONFIG_FTRACE is not set
+CONFIG_GROUP_BALANCER=y
