anolis: configs: Enable CONFIG_DEBUG_PREEMPT for debug kernel
ANBZ: #9326

To prepare for preempt=full in future, enable CONFIG_DEBUG_PREEMPT to
detect bugs in vanilla kernel and anolis own features.

Signed-off-by: Tianchen Ding <dtcccc@linux.alibaba.com>
Reviewed-by: Qiao Ma <mqaio@linux.alibaba.com>
Acked-by: Zelin Deng <zelin.deng@linux.alibaba.com>
Link: https://gitee.com/anolis/cloud-kernel/pulls/3350

--- a/arch/arm64/configs/anolis-debug_defconfig
+++ b/arch/arm64/configs/anolis-debug_defconfig
@@ -7001,7 +7001,7 @@ CONFIG_SCHED_ACPU=y
 # end of Scheduler Debugging
 
 # CONFIG_DEBUG_TIMEKEEPING is not set
-# CONFIG_DEBUG_PREEMPT is not set
+CONFIG_DEBUG_PREEMPT=y
 
 #
 # Lock Debugging (spinlocks, mutexes, etc...)
