--- a/arch/x86/configs/anolis_defconfig
+++ b/arch/x86/configs/anolis_defconfig
@@ -7289,6 +7289,7 @@ CONFIG_CRYPTO_SERPENT=m
 CONFIG_CRYPTO_SERPENT_SSE2_X86_64=m
 CONFIG_CRYPTO_SERPENT_AVX_X86_64=m
 CONFIG_CRYPTO_SERPENT_AVX2_X86_64=m
+CONFIG_CRYPTO_SM2_ZHAOXIN_GMI=m
 CONFIG_CRYPTO_SM4=y
 CONFIG_CRYPTO_SM4_AESNI_AVX_X86_64=y
 CONFIG_CRYPTO_SM4_AESNI_AVX2_X86_64=y
